# dynsight

./: .coverage.cantoalto.polito.it.13481.XDNgkqFx  .coverage.cantoalto.polito.it.49608.XKZnEWpx  .coverage.cantoalto.polito.it.50327.XuDPKKex  .gitignore  .readthedocs.yaml  LICENSE  README.rst  justfile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: publish_release.yaml  tests.yaml
docs/source/: analysis.rdf  analysis.rst  analysis_workflow.rst  conf.py  data_processing.rst  descr_from_trj.rst  descriptors.rst  entropy.rst  example_info_gain.rst  example_sample_entropy.rst  hdf5er.rst  index.rst  info_gain.rst  lens.rst  logs.rst  onion.rst  recipe_descr_from_trj.rst  recipe_entropy.rst  recipe_info_gain.rst  recipe_soap_dim_red.rst  sample_entropy.rst  soap.rst  soap_dim_red.rst  soapify.rst  tica.rst  time_soap.rst  tmp_info_gain.rst  track.rst  trajectory.rst  tutorials_menu.rst  vision.rst  workflow.rst
docs/source/_static/: style.css
docs/source/_templates/: class.rst
docs/source/label_tool/: label_tool.rst
docs/source/tutorials/: cleaning_cluster_population.rst  getting_started.rst  spatial_denoising.rst  tips_and_tricks.rst
examples/: analysis_workflow.py  file_handling.py  info_gain.py  lens.py  onion_analysis.py  onion_multi.py  onion_plots.py  onion_uni.py  sample_entropy.py  soap.py  time_soap.py  video_detection.py  video_to_trajectory.py
examples/analysis_workflow/: oxygens.gro  water_trj.pkl
examples/samp_en/: tmp_frac_array.txt  tmp_sampen_array.txt  tmp_sampen_array_weigh.txt
src/dynsight/: __init__.py  analysis.py  data_processing.py  descriptors.py  hdf5er.py  lens.py  logs.py  onion.py  soap.py  soapify.py  tica.py  time_soap.py  track.py  trajectory.py  utilities.py  vision.py
src/dynsight/_internal/: logs.py
tests/: octahedron_test.hdf5  test_foo.py  test_lens.py  test_soap.py  test_tsoap.py
tests/analysis/: test_rdf.py  test_sampen.py  test_sample_entropy.py  test_shannon.py  test_spatialaverage.py  test_time_correlations.py
tests/analysis/rdf/: case_data.py  conftest.py  test_rdf.py
tests/analysis/spavg/: test_spavg.npy
tests/analysis/tcorr/: c_corr.npy  ctd_dev.npy  std_dev.npy  t_corr.npy
tests/analysis/test_rdf/: test_rdf.npy
tests/data_processing/: test_spatialaverage.py
tests/data_processing/cluster/: case_data.py  conftest.py  test_cluster.py
tests/data_processing/trajectory/: .test_spavg.xtc_offsets.npz  test_spavg.xtc
tests/lens/: case_data.py  conftest.py  test_count_neigh.py  test_emulate_lens.py  test_lens.py  test_special_lens.py  to_remove_test_count_neigh.py  to_remove_test_emulate_lens.py  tst_emulate_lens.py  utilities.py
tests/lens/test_lens/: c2_lens_rc4_d1_1_all_1.npy  c4_lens_rc4_d1_all_all_2.npy  c5_lens_rc4_d2_all_all_1.npy
tests/logger/: test_logger.py
tests/neighbors/: case_data.py  conftest.py  test_nn.py
tests/neighbors/test_nn/: c0_nn_rc3_all_all_1.npy  c2_nn_rc4_1_all_1.npy
tests/onion/: multi.py  test_multi.py  test_onion.py  test_uni.py  uni.py
tests/onion/output_multi/: 2D_trajectory.npy  final_states.txt  fraction_0.txt  labels.npy  labels_3D.npy  number_of_states.txt
tests/onion/output_uni/: final_states.txt  fraction_0.txt  labels.npy  number_of_states.txt
tests/soap/: case_data.py  conftest.py  test_soap.py  test_tsoap.py
tests/soap/test_soap/: c0_soap_rc8_l4_n4_pbc0_all.npy  c1_soap_rc8_l6_n6_pbc1_noc5.npy  c2_soap_rc8_l6_n6_pbc1_all.npy  c3_soap_rc8_l4_n4_pbc1_noc5.npy  c4_soap_rc8_l4_n4_pbc1_c3c6.npy  c5_soap_rc8_l4_n4_pbc1_all.npy
tests/systems/: .balls_7_nvt.xtc_offsets.npz  2_particles.hdf5  2_particles.xyz  LENS.npz  SOAP.npz  SOAP_0.npy  SOAP_1.npy  SOAP_2.npy  SOAP_3.npy  SOAP_4.npy  SOAP_5.npy  SOAP_6.npy  _tmp.json  balls_7_nvt.gro  balls_7_nvt.xtc  lens_2d_fbc.npy  lens_2d_pbc.npy  lj_id.xyz  lj_noid.xyz  octahedron.hdf5  octahedron.xyz  octahedron_test_tsoap.hdf5  tSOAP.npy  tSOAP.npz  tSOAP_0.npy  tSOAP_1.npy  tSOAP_2.npy  tSOAP_3.npy  tSOAP_4.npy  tSOAP_5.npy
tests/systems/coex/: test_coex.gro
tests/track/: test_track.py
tests/trajectory/: test_trj.py
tests/trajectory/files/: _tmp.json  cl_ins_test.json  ins_1_test.json  ins_1_test.npy  insight.xyz  labels.xyz  lens.json  lens.npy  n_c.json  n_c.npy  on_ins_test.json  phi.json  (+11 more)
tests/tsoap/: case_data.py  conftest.py  test_tsoap.py
tests/utilities/: test_utilities.py
tests/vision/: test_label_tool.py  test_vision.py
(+68 files in other folders)
