[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dynsight"
maintainers = [
  { name = "Andrew Tarzia", email = "andrew.tarzia@gmail.com" },
]

dependencies = [
  "cpctools",
  "dscribe >1.2.0, <=1.2.2",
]
# Set by cpctools.
requires-python = "<3.11,>=3.8"
dynamic = ["version"]
readme = "README.rst"
description = "Simplifies analysis of Molecular Dynamics simulations."

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "build",
  "twine",
  "furo",
  "numba",
]

[project.urls]
github = "https://github.com/GMPavanLab/dynsight"
documentation = "https://dynsight.readthedocs.io/en/latest/"

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
select = ["ALL"]
ignore = [
  "ANN101",
  "ANN401",
  "COM812",
  "ISC001",
  "FBT001",
  "FBT002",
  "PLR0913",
  "G004",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "S101",
  "INP001",
  "ANN001",
  "ANN201",
]
"examples/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "S101",
  "INP001",
  "C901",
  "N803",
  "ANN001",
  "PLR0912",
  "PLR0915",
]
"docs/source/conf.py" = ["D100", "INP001"]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
  'MDAnalysis.*',
  'h5py.*',
  'SOAPify.*',
  'numba.*',
]
ignore_missing_imports = true
